<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SBingo</string>
    <string name="bingo_name">賓果APP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="modechoose">模式選擇</string>
    <string name="inputmode"> 輸入模式</string>
    <string name="gamemode">遊戲模式Level</string>
    <string name="point">分</string>
    <string name="random">[亂數]</string>
    <string name="game">[進入遊戲]</string>
    <string name="input">[開始輸入]</string>
    <string name="clear">[清除]</string>
    <string name="bingo">Bingo</string>
    <string name="enter">[Level]</string>
    <string name="levelchoose">[選擇Level]</string>
    <string name="extra_number_of_bingo">"個"</string>
    <string name="wrongnumber">數字超過或重複!!</string>
    <string name="input_bingo_number">點選數字</string>
    <item type="id" name ="tag_first"></item>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

</resources>
